# challenge_deploy

./: .gitignore  README.md  pyproject.toml  run_dreamzero_client.py  run_hdf5_teleop_collect.py  run_hdf5_teleop_episode_vis.py  run_motus_client.py  run_openpi_client.py  run_openpi_clients.py  run_openpi_sim_client.py  run_xvla_client.py  run_xvla_clients.py
challenge_deploy/: __init__.py  buffer.py  can_tools.py  config.py  constants.py  conversions.py  dataset.py  lerobot_assets.py  motus_client.py  observation.py  openpi_client.py  openpi_rollout.py  openpi_sim_client.py  piper.py  recording.py  runtime.py  schemas.py  task_segmentation.py
challenge_deploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
clients/: __init__.py  base.py  dreamzero.py  motus.py  msgpack_numpy.py  openpi.py  openpi_sim.py  slai_piper_policy.py  specs.py  websocket_client_policy.py  xvla.py
configs/: dual_piper_example.yaml
dagger/: agilex_openpi_dagger_collect.py  collect_data.py
data/: __init__.py  worker.py
docs/: deploy_call_chain.md  hdf5_teleop.md  kai0_deploy_improvements.md  sam3_submodule.md
hardware/: __init__.py  constants.py  conversions.py  piper.py  realsense.py  schemas.py
inference/: agilex_inference_openpi_sync.py  agilex_inference_openpi_temporal_smoothing.py
rollout/: __init__.py  assets.py  execution.py  metrics.py  recording.py  support.py  task_segmentation.py
teleop/: __init__.py  hdf5_teleop.py  resample_hdf5_teleop.py  worker.py
tools/: activate_can.py  cache_lerobot_train_assets.py  capture_cam_high_background.py  capture_snapshot.py  compare_lerobot_sample_action.py  get_action_steps_real_time.py  list_can_ports.py  list_realsense_devices.py  plot_saved_action_records.py  probe_dual_piper.py  replay_piper_npz_trajectory.py  scan_piper_gripper_opening.py  sync_embodichain_visualize_distribution.py  test_gripper_with_wrist_cameras.py  test_motus_gripper_threshold.py  test_openpi_client_gripper_path.py
